# netology_homework_2_10

1/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt
